<?xml version="1.0"?>
<package format="3">
  <name>google_chat_ros</name>
  <version>2.1.25</version>
  <description>Use Google Chat API clients via ROS</description>

  <author email="obinata@jsk.imi.i.u-tokyo.ac.jp">Yoshiki Obinata</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gdrive_ros</exec_depend>
  <exec_depend>dialogflow_task_executive</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
